# reWrite

./: .gitignore  AGENTS.md  README.md  agent.md  bubble-menu-bug-diagnosis.md  cicd.md  index.html  infrastructure.md  package-lock.json  package.json  project.md  rewrite-app-spec.md  roadmap-mac.md  roadmap.md  separation-of-concerns-sprintmap.md  stripe-integration-practices.md  stripe_integration_playbook.md  stripe_payments_best_practice.md  test-cases.md  update.md  v1.1.0-selection-bubble.md
.claude/: settings.local.json
.github/workflows/: macos-check.yml  release.yml
docs/: cloud-sync-plan.md
src/: App.css  App.tsx  index.css  skills.ts  theme.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: uia_probe.rs
src-tauri/icons/: icon.icns
src-tauri/src/: auth.rs  clipboard.rs  commands.rs  config.rs  esc_hook.rs  foreground.rs  history.rs  lib.rs  main.rs  rewrite.rs  secure_store.rs  selection_watcher.rs  skills.rs  sync.rs  tone_of_voice.rs
src-tauri/target-codex-bubble-check/: .rustc_info.json
src-tauri/target-codex-bubble-check/debug/.fingerprint/cfg-if-3dccf8372c0e472c/: output-lib-cfg_if
src-tauri/target-codex-bubble-check/debug/.fingerprint/fastrand-f47cf8eb7b2e972b/: output-lib-fastrand
src-tauri/target-codex-bubble-check/debug/.fingerprint/icu_normalizer_data-96a52fd262d0f4c6/: output-build-script-build-script-build
src-tauri/target-codex-bubble-check/debug/.fingerprint/icu_properties_data-cd63a06a3e531c28/: output-build-script-build-script-build
src-tauri/target-codex-bubble-check/debug/.fingerprint/parking_lot_core-12fc7eb0299b59cc/: output-build-script-build-script-build
src-tauri/target-codex-bubble-check/debug/.fingerprint/proc-macro2-f101e74d49154d97/: output-build-script-build-script-build
src-tauri/target-codex-bubble-check/debug/.fingerprint/quote-a01905ec43427c6e/: output-build-script-build-script-build
src-tauri/target-codex-bubble-check/debug/.fingerprint/serde_core-73d152b7ceda14db/: output-build-script-build-script-build
src-tauri/target-codex-bubble-check/debug/.fingerprint/serde_core-fdf5f60f2a35bbe7/: output-build-script-build-script-build
src-tauri/target-codex-bubble-check/debug/.fingerprint/siphasher-eb85d5c82ffed796/: output-lib-siphasher
src-tauri/target-codex-bubble-check/debug/.fingerprint/smallvec-c407ad6534c6dd52/: output-lib-smallvec
src-tauri/target-codex-bubble-check/debug/.fingerprint/stable_deref_trait-48ab879ba2e22c76/: output-lib-stable_deref_trait
src-tauri/target-codex-bubble-check/debug/.fingerprint/thiserror-f4d6322d70c52f5c/: output-build-script-build-script-build
src-tauri/target-codex-bubble-check/debug/.fingerprint/unicode-ident-c2fe9f6b8ade098b/: output-lib-unicode_ident
src-tauri/target-codex-bubble-check/debug/.fingerprint/windows-link-54c7aa1677a9df5f/: output-lib-windows_link
src-tauri/target-codex-bubble-check/debug/.fingerprint/zmij-bbaef9d295c9b9a4/: output-build-script-build-script-build
src/pages/: AccessibilityView.tsx  Bubble.tsx  BubbleMenu.tsx  Onboarding.tsx  Overlay.tsx  Processing.tsx  Settings.tsx  settingsComponents.tsx  settingsConstants.ts  settingsHelpers.ts  settingsTypes.ts
supabase/: config.toml
supabase/.temp/: linked-project.json  pooler-url  project-ref
supabase/functions/_shared/: cors.ts  plan.ts
supabase/functions/checkout-cancel/: index.ts
supabase/functions/checkout-success/: index.ts
supabase/functions/create-checkout-session/: index.ts
supabase/functions/create-portal-session/: index.ts
supabase/functions/rewrite/: index.ts
supabase/functions/stripe-webhook/: index.ts
supabase/functions/sync-subscription/: index.ts
supabase/migrations/: 001_profiles.sql  002_usage_limits.sql  003_plan_tiers.sql  004_drop_tone_of_voice.sql  004_tone_of_voice.sql  005_lock_down_definer_functions.sql  006_cloud_sync.sql  README.md
