[package]
name = "rewrite"
version = "1.0.0"
description = "reWrite - System-wide AI Text Transformer for Windows"
authors = ["Josh"]
edition = "2021"

[lib]
name = "rewrite_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-ico", "image-png"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
arboard = "3"
enigo = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls"] }
tokio = { version = "1", features = ["full"] }
toml = "0.8"
anyhow = "1"

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Security_Cryptography",
] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5"
objc2-app-kit = { version = "0.2", features = ["NSWorkspace", "NSRunningApplication"] }
objc2-foundation = { version = "0.2", features = ["NSString"] }
