[package]
name = "rewrite"
version = "1.1.6"
description = "reWrite - System-wide AI Text Transformer for Windows"
authors = ["Josh"]
edition = "2021"

[lib]
name = "rewrite_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-ico", "image-png", "macos-private-api"] }
tauri-plugin-opener = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-deep-link = "2"
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
arboard = "3"
enigo = "0.2"
reqwest = { version = "0.12", default-features = false, features = ["json", "native-tls"] }
tokio = { version = "1", features = ["full"] }
toml = "0.8"
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Security_Cryptography",
] }
# Real product dependency as of selection_watcher.rs (v1.1.0 selection-bubble
# Sprint 1) — see src-tauri/examples/uia_probe.rs for why this is the `windows`
# crate rather than windows-sys (which exposes UIA's COM interfaces as opaque
# `*mut c_void` with no generated vtables/methods). windows 0.61.x was already
# present transitively via other dependencies, so this adds no new major
# version to the tree.
windows = { version = "0.61", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_UI_Accessibility",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Gdi",
] }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.5"
objc2-app-kit = { version = "0.2", features = ["libc", "NSWorkspace", "NSRunningApplication", "NSScreen"] }
objc2-foundation = { version = "0.2", features = ["NSString"] }
keyring = { version = "3", features = ["apple-native"] }
aes-gcm = "0.10"
rand = "0.8"
